--- a/ui/package.json
+++ b/ui/package.json
@@ -24,9 +24,10 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "build:library": "react-app-rewired build --library",
+    "build:api_client": "openapi-generator generate -i ../docs/swagger.yaml -g typescript-axios -c .openapi_config.yaml -o src/utils/dashboard_client",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "build_api_client": "openapi-generator generate -i ../docs/swagger.yaml -g typescript-axios -c .openapi_config.yaml -o src/utils/dashboard_client"
+    "eject": "react-scripts eject"
   },
   "homepage": "/dashboard",
   "eslintConfig": {
@@ -52,7 +53,9 @@
     "@types/node": "^13.1.5",
     "@types/react": "^16.9.22",
     "@types/react-router-dom": "^5.1.3",
+    "add-asset-webpack-plugin": "^1.0.0",
     "antd-dayjs-webpack-plugin": "^0.0.8",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "less": "^3.10.3",
@@ -60,6 +63,9 @@
     "react-app-rewire-yaml": "^1.1.0",
     "react-app-rewired": "^2.1.5",
     "react-scripts": "3.1.x",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "webpack-bundle-analyzer": "^3.6.1",
+    "webpack-node-externals": "^1.7.2",
+    "webpackbar": "^4.0.0"
   }
 }
