--- a/ui/packages/statement/package.json
+++ b/ui/packages/statement/package.json
@@ -17,7 +17,8 @@
     "prepare": "yarn run build"
   },
   "dependencies": {
-    "@baurine/grafana-value-formats": "^0.1.1"
+    "@baurine/grafana-value-formats": "^0.1.1",
+    "@pingcap-incubator/dashboard_client": "0.0.1"
   },
   "peerDependencies": {
     "antd": "^3.26.5",
