--- a/ui/package.json
+++ b/ui/package.json
@@ -32,7 +32,7 @@
     "build": "yarn run build:packages && react-app-rewired build",
     "test": "react-app-rewired test",
     "clean": "yarn workspaces run clean",
-    "publish:packages": "yarn workspaces run publish"
+    "publish:packages": "lerna publish from-package"
   },
   "homepage": "/dashboard",
   "eslintConfig": {
