--- a/ui/packages/statement/package.json
+++ b/ui/packages/statement/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pingcap-incubator/statement",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "author": "pingcap-incubator",
   "repository" : {
@@ -22,33 +22,27 @@
   },
   "dependencies": {
     "@baurine/grafana-value-formats": "^0.1.1",
-    "@pingcap-incubator/dashboard_client": "0.0.1"
-  },
-  "peerDependencies": {
+    "@pingcap-incubator/dashboard_client": "0.0.1",
     "antd": "^3.26.5",
     "i18next": "^19.1.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-i18next": "^11.3.2",
     "react-router-dom": "^5.1.2"
+  },
+  "peerDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^2.1.0",
     "@svgr/rollup": "^2.4.1",
     "@types/react": "^16.9.22",
-    "antd": "^3.26.5",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.1.4",
-    "i18next": "^19.1.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-i18next": "^11.3.2",
-    "react-router-dom": "^5.1.2",
     "rollup": "^1.32.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
