--- a/ui/package.json
+++ b/ui/package.json
@@ -9,10 +9,10 @@
     "@g07cha/flexbox-react": "^5.0.0",
     "@pingcap-incubator/dashboard_client": "^0.0.5",
     "@pingcap-incubator/statement": "^0.0.5",
+    "@pingcap-incubator/keyvis": "^0.0.5",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
-    "d3": "^5.15.0",
     "framer-motion": "^1.9.0",
     "dayjs": "^1.8.22",
     "i18next": "^19.1.0",
@@ -53,7 +53,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@types/d3": "^5.7.2",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.5",
     "@types/react": "^16.9.22",
