--- a/ui/packages/keyvis/package.json
+++ b/ui/packages/keyvis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pingcap-incubator/statement",
+  "name": "@pingcap-incubator/keyvis",
   "version": "0.0.5",
   "description": "",
   "author": "pingcap-incubator",
@@ -21,14 +21,13 @@
     "p": "yarn publish"
   },
   "dependencies": {
-    "@baurine/grafana-value-formats": "^0.1.1",
+    "@g07cha/flexbox-react": "^5.0.0",
     "@pingcap-incubator/dashboard_client": "^0.0.5",
     "antd": "^3.26.5",
+    "d3": "^5.15.0",
     "i18next": "^19.1.0",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "react-i18next": "^11.3.2",
-    "react-router-dom": "^5.1.2"
+    "react-i18next": "^11.3.2"
   },
   "peerDependencies": {
     "react": "^16.12.0",
@@ -37,6 +36,7 @@
   "devDependencies": {
     "@rollup/plugin-yaml": "^2.1.0",
     "@svgr/rollup": "^2.4.1",
+    "@types/d3": "^5.7.2",
     "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.22",
     "babel-core": "^6.26.3",
