--- a/ui/package.json
+++ b/ui/package.json
@@ -2,9 +2,13 @@
   "name": "tidb-dashboard-ui",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "dependencies": {
-    "@baurine/grafana-value-formats": "^0.1.1",
     "@g07cha/flexbox-react": "^5.0.0",
+    "@pingcap-incubator/dashboard_client": "^0.0.5",
+    "@pingcap-incubator/statement": "^0.0.5",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
@@ -23,11 +27,13 @@
     "single-spa-react": "^2.11.0"
   },
   "scripts": {
+    "watch:packages": "lerna run --parallel watch",
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build:packages": "lerna run --stream --sort build",
+    "build": "yarn run build:packages && react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "build_api_client": "openapi-generator generate -i ../docs/swagger.yaml -g typescript-axios -c .openapi_config.yaml -o src/utils/dashboard_client"
+    "clean": "yarn workspaces run clean",
+    "publish:packages": "yarn workspaces run p"
   },
   "homepage": "/dashboard",
   "eslintConfig": {
@@ -47,7 +53,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@openapitools/openapi-generator-cli": "^1.0.8-4.2.2",
     "@types/d3": "^5.7.2",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.5",
@@ -56,6 +61,7 @@
     "antd-dayjs-webpack-plugin": "^0.0.8",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "lerna": "^3.20.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react-app-rewire-yaml": "^1.1.0",
