--- a/ui/package.json
+++ b/ui/package.json
@@ -9,12 +9,13 @@
     "@g07cha/flexbox-react": "^5.0.0",
     "@pingcap-incubator/dashboard_client": "^0.0.5",
     "@pingcap-incubator/statement": "^0.0.5",
+    "@use-it/event-listener": "^0.1.3",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "d3": "^5.15.0",
-    "framer-motion": "^1.9.0",
     "dayjs": "^1.8.22",
+    "framer-motion": "^1.9.0",
     "i18next": "^19.1.0",
     "i18next-browser-languagedetector": "^4.0.1",
     "lodash": "^4.17.15",
