--- a/ui/package.json
+++ b/ui/package.json
@@ -7,9 +7,9 @@
   ],
   "dependencies": {
     "@g07cha/flexbox-react": "^5.0.0",
-    "@pingcap-incubator/dashboard_client": "^0.0.6",
-    "@pingcap-incubator/statement": "^0.0.6",
-    "@pingcap-incubator/keyvis": "^0.0.6",
+    "@pingcap-incubator/dashboard_client": "^0.0.7",
+    "@pingcap-incubator/statement": "^0.0.7",
+    "@pingcap-incubator/keyvis": "^0.0.7",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
@@ -33,7 +33,8 @@
     "build": "yarn run build:packages && react-app-rewired build",
     "test": "react-app-rewired test",
     "clean": "yarn workspaces run clean",
-    "publish:packages": "yarn workspaces run p"
+    "publish:packages": "yarn workspaces run p",
+    "bump:packages": "lerna version --no-git-tag-version --no-push"
   },
   "homepage": "/dashboard",
   "eslintConfig": {
