--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@g07cha/flexbox-react": "^5.0.0",
     "@pingcap-incubator/dashboard_client": "^0.0.7",
+    "@pingcap-incubator/dashboard_components": "^0.0.7",
     "@pingcap-incubator/statement": "^0.0.7",
     "@pingcap-incubator/keyvis": "^0.0.7",
     "antd": "^3.26.5",
