--- a/ui/packages/keyvis/package.json
+++ b/ui/packages/keyvis/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@g07cha/flexbox-react": "^5.0.0",
     "@pingcap-incubator/dashboard_client": "^0.0.7",
+    "@pingcap-incubator/dashboard_components": "^0.0.7",
     "@use-it/event-listener": "^0.1.3",
     "antd": "^3.26.5",
     "d3": "^5.15.0",
