--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "@pingcap-incubator/dashboard_client": "^0.0.5",
     "@pingcap-incubator/dashboard_components": "^0.0.5",
     "@pingcap-incubator/statement": "^0.0.5",
+    "@pingcap-incubator/keyvis": "^0.0.5",
     "@use-it/event-listener": "^0.1.3",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
@@ -35,7 +36,8 @@
     "build": "yarn run build:packages && react-app-rewired build",
     "test": "react-app-rewired test",
     "clean": "yarn workspaces run clean",
-    "publish:packages": "yarn workspaces run p"
+    "publish:packages": "yarn workspaces run p",
+    "bump:packages": "lerna version --no-git-tag-version --no-push"
   },
   "homepage": "/dashboard",
   "eslintConfig": {
