--- a/ui/packages/keyvis/package.json
+++ b/ui/packages/keyvis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pingcap-incubator/dashboard_components",
+  "name": "@pingcap-incubator/keyvis",
   "version": "0.0.8",
   "description": "",
   "author": "pingcap-incubator",
@@ -21,8 +21,15 @@
     "p": "yarn publish"
   },
   "dependencies": {
+    "@g07cha/flexbox-react": "^5.0.0",
+    "@pingcap-incubator/dashboard_client": "^0.0.8",
+    "@pingcap-incubator/dashboard_components": "^0.0.8",
+    "@use-it/event-listener": "^0.1.3",
     "antd": "^3.26.5",
-    "classnames": "^2.2.6"
+    "d3": "^5.15.0",
+    "i18next": "^19.1.0",
+    "lodash": "^4.17.15",
+    "react-i18next": "^11.3.2"
   },
   "peerDependencies": {
     "react": "^16.12.0",
@@ -31,12 +38,10 @@
   "devDependencies": {
     "@rollup/plugin-yaml": "^2.1.0",
     "@svgr/rollup": "^2.4.1",
+    "@types/d3": "^5.7.2",
+    "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.22",
     "babel-core": "^6.26.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.1.4",
     "react": "^16.12.0",
