--- a/ui/package.json
+++ b/ui/package.json
@@ -9,9 +9,9 @@
     "@g07cha/flexbox-react": "^5.0.0",
     "@pingcap-incubator/dashboard_client": "^0.0.8",
     "@pingcap-incubator/dashboard_components": "^0.0.8",
-    "@pingcap-incubator/statement": "^0.0.8",
     "@pingcap-incubator/keyvis": "^0.0.8",
-    "@use-it/event-listener": "^0.1.3",
+    "@pingcap-incubator/statement": "^0.0.8",
+    "@umijs/hooks": "^1.8.0",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
@@ -26,6 +26,7 @@
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.2",
     "react-router-dom": "^5.1.2",
+    "react-spring": "^8.0.27",
     "single-spa": "^4.4.2",
     "single-spa-react": "^2.11.0"
   },
