--- a/ui/package.json
+++ b/ui/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@types/d3": "^5.7.2",
+    "@types/jest": "^24.9.0",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.5",
     "@types/react": "^16.9.22",
@@ -69,6 +70,7 @@
     "lerna": "^3.20.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "puppeteer": "^2.1.1",
     "react-app-rewire-yaml": "^1.1.0",
     "react-app-rewired": "^2.1.5",
     "react-scripts": "3.1.x",
